# memorymanagement

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: Doxyfile
include/: memory_management.h
include/memory_management/: memory_management.h
memorymanagement.xcodeproj/: project.pbxproj
memorymanagement.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
memorymanagement.xcodeproj/project.xcworkspace/xcshareddata/: memorymanagement.xccheckout
src/: memory_management.c
test/: Point.c  Point.h  testMemoryManagement.c
